# OpenHabitTracker/Data/TokenResponse.cs
@@ -1,0 +1,6 @@
+namespace OpenHabitTracker.Data;
+
+public class TokenResponse
+{
+    public required string Token { get; set; }
+}
